--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node src/index.ts",
-    "dev": "ts-node-dev src/index.ts"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.15.13",
+    "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
