--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.4.0",
         "globals": "^16.0.0",
+        "jiti": "^2.4.2",
         "nodemon": "^3.1.10",
         "prettier": "^3.5.3",
         "ts-node-dev": "^2.0.0",
