--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.32.0"
+    },
+    "dependencies": {
+        "commander": "^13.1.0"
     }
 }
