--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "homepage": "https://github.com/KristinaVidakovic/code-challenge-oop#readme",
     "description": "",
     "devDependencies": {
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.15.13",
         "@typescript-eslint/eslint-plugin": "^8.32.0",
         "@typescript-eslint/parser": "^8.32.0",
@@ -32,9 +33,11 @@
         "eslint-config-prettier": "^10.1.2",
         "eslint-plugin-prettier": "^5.4.0",
         "globals": "^16.0.0",
+        "jest": "^29.7.0",
         "jiti": "^2.4.2",
         "nodemon": "^3.1.10",
         "prettier": "^3.5.3",
+        "ts-jest": "^29.3.2",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.32.0"
